--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI小助手</title>
-  <link href="./output.css" rel="stylesheet">
+  <link href="./public/output.css" rel="stylesheet">
 </head>
 <body>  
   <div id="root"></div>
+  <script type="module" src="./src/index.jsx"></script>
 </body>
 </html>
